CDR-1375 Open-Source new ehrbase version